--- a/src/components/navigation/navigation.styles.scss
+++ b/src/components/navigation/navigation.styles.scss
@@ -1,4 +1,30 @@
 @import "../../variables.scss";
 
 .nav-container {
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    ul {
+        list-style: none;
+        display: flex;
+        justify-content: space-between;
+        width: 100px;
+        margin: 0;
+        padding: 0;
+        li {
+            a {
+                color: white;
+                text-decoration: none;
+
+                &:hover {
+                    text-decoration: underline;
+                }
+
+                &.active {
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
 }
