with tanstack query

--- a/src/components/player-card/player-card.styles.scss
+++ b/src/components/player-card/player-card.styles.scss
@@ -39,4 +39,10 @@
             font-size: 13px;
         }
     }
+
+    &:hover {
+        transform: scale(1.04);
+        transition: 0.3s ease-out;
+        cursor: pointer;
+    }
 }
